# SpinnyCube

./: .gitignore  CMakeLists.txt  README.md  cube.hpp  main.cpp  matrices.hpp  renderer.hpp
